modify search box

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+
     <div id="content">
         <div class="container">
             <h1>Lets practice local storage</h1>
@@ -24,6 +25,7 @@
 
                      </form>
                 </div> <!--.six-->
+                <p id="FormText"></p>
                 <div class="six columns">
                    <table>
                     <thead>
@@ -39,6 +41,7 @@
             </div>
         </div>
     </div> <!--#contenido-->
+
 
     <script src="assets/js/app.js"></script>
 </body>
